--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <div class="icon">
+      <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+      <link rel="icon" sizes="16x16" href="images/favicon-16x16.png" />
+      <link rel="icon" sizes="32x32" href="images/favicon-32x32.png" />
+      <link rel="android-chrome" sizes="192x192" href="images/android-chrome-192x192.png" />
+      <link rel="android-chrome" sizes="512x512" href="images/android-chrome-512x512.png" />
+    </div>
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
